--- a/views/user.ejs
+++ b/views/user.ejs
@@ -24,20 +24,11 @@
             <button onclick="createRoom()">create</button>
 
             <div class="chat-container flex">
-                <div id="friends-list"></div>
+                <div id="friends-list">
+                    <label style="margin: auto;">Add people to chat</label>
+                </div>
                 <div class="chat-window" id="chat-window">
-                    <div id="chat-header">
-                        <p id="friendname"></p>
-                        <p id="typing"></p>
-                        <p id="online"></p>
-                    </div>
-                    <div class="messages" id="messages"></div>
-                    <div id="input">
-                        <input type="text" id="message-input" placeholder="Type a message...">
-                        <button onclick="sendMessage()">Send</button>
-                        <button onclick="clearChat()">Clear chat</button>
-                        <button onclick="tictactoe()">Challenge</button>
-                    </div>
+                    <label style="margin: auto;">Select people to message</label>
                 </div>
             </div>
 
@@ -132,6 +123,8 @@
     }
 
     function loadRooms() {
+        const friendsListDiv = document.getElementById("friends-list");
+        friendsListDiv.innerHTML = "";
         socket.emit("loadRooms", userId);
     }
 
@@ -144,24 +137,78 @@
         const friendsListDiv = document.getElementById("friends-list");
         friendsListDiv.innerHTML = "";
         friends.forEach((friend) => {
-            const friendElement = document.createElement("div");
-            friendElement.className = "friend-item";
-            friendElement.innerText = friend;
-            friendElement.onclick = () => friendClickHandler(friend);
-            friendsListDiv.appendChild(friendElement);
+            loadData(friend);
         });
+    }
+
+    function loadData(friend) {
+        const username = friend;
+        fetch(`/loadData?username=${username}`, {
+            method: 'GET',
+            headers: {
+                'Content-Type': 'application/json',
+            },
+        })
+            .then(response => response.json())
+            .then(data => {
+                if (data.status === "success") {
+                    const friendElement = createFriendElement(data.user);
+                    const friendsListDiv = document.getElementById("friends-list");
+                    friendsListDiv.appendChild(friendElement);
+                } else {
+                    alert('Failed to load profile data for ' + friend);
+                }
+            })
+            .catch(error => {
+                console.error('Error:', error);
+            });
+    }
+
+    function createFriendElement(user) {
+        const friendElement = document.createElement("div");
+        friendElement.className = "friend-item";
+        const profileImage = document.createElement("div");
+        profileImage.className = "friend-profilePhoto";
+        const profileImage1 = document.createElement("img");
+
+        if (user.profilePhoto) {
+            console.log("srfdgtfgdanhz")
+            profileImage1.src = user.profilePhoto;
+            profileImage1.alt = "Profile Photo";
+            profileImage.appendChild(profileImage1);
+        } else {
+            profileImage1.src = "../assets/default-profile.jpg";
+            profileImage1.alt = "Profile Photo";
+            profileImage.appendChild(profileImage1);
+        }
+        friendElement.appendChild(profileImage);
+        const friendName = document.createElement("div");
+        friendName.className = "friend-name";
+        friendName.style.paddingTop = "10px"
+        friendName.style.marginLeft = "0"
+        friendName.innerText = user.username;
+
+        friendElement.appendChild(friendName);
+
+        friendElement.onclick = () => friendClickHandler(user.username, user);
+
+        return friendElement;
     }
 
     function updateRoomsList(rooms) {
         const friendsListDiv = document.getElementById("friends-list");
-        friendsListDiv.innerHTML = "";
-        rooms.forEach((room) => {
-            const roomElement = document.createElement("div");
-            roomElement.className = "friend-item";
-            roomElement.innerText = room.name;
-            roomElement.onclick = () => roomClickHandler(room);
-            friendsListDiv.appendChild(roomElement);
-        });
+        if (!rooms) {
+            friendsListDiv.innerHTML = ` <label style="margin: auto;">Add people to chat</label>`;
+        } else {
+            friendsListDiv.innerHTML = " ";
+            rooms.forEach((room) => {
+                const roomElement = document.createElement("div");
+                roomElement.className = "friend-item";
+                roomElement.innerText = room.name;
+                roomElement.onclick = () => roomClickHandler(room);
+                friendsListDiv.appendChild(roomElement);
+            });
+        }
     }
 
     function scrollToBottom() {
@@ -169,30 +216,31 @@
         chatContainer.scrollTop = chatContainer.scrollHeight;
     }
 
-    function friendClickHandler(x) {
-        const chatHeader = document.getElementById('friendname');
-        chatHeader.innerText = x;
-        const friend = document.querySelector(".friend-item");
-        friend.style.backgroundColor = "#07a607";
+    function friendClickHandler(x, user) {
         recipientID = x;
-        const messages = document.getElementById("messages");
-        messages.innerHTML = "";
+        const chatWindow = document.querySelector(".chat-window");
 
-        socket.on("onlineFriends", (data) => {
-            console.log(data)
-            const { onlineFriends } = data;
-            onlineFriends.forEach((friend) => {
-                const roomElement = document.getElementById("online");
-                if (recipientID === friend) {
-                    roomElement.innerText = "online";
-                }
-            });
-        });
+        chatWindow.innerHTML = `<div id="chat-header"></div>
+                    <div class="messages" id="messages"></div>
+                    <div id="input">
+                        <input type="text" id="message-input" placeholder="Type a message...">
+                        <button onclick="sendMessage()">Send</button>
+                        <button onclick="clearChat()">Clear chat</button>
+                        <button onclick="tictactoe()">Challenge</button>
+                    </div>`;
+
+        loadHeader(recipientID, user)
+
+        const script = document.createElement("script");
+        script.src = "../frontend/scripts/user.js";
+        script.id = "user-script";
+        document.body.appendChild(script);
 
         const dataToSend = {
-                recipientID: x,
-                userId: userId
-            };
+            recipientID: x,
+            userId: userId
+        };
+
         fetch("/loadHistory", {
             method: "POST",
             headers: {
@@ -212,32 +260,51 @@
                 alert("An error occurred while loading history. Please try again later.");
             });
 
-
-        function displayChatHistory(chatHistory) {
-            chatHistory.forEach((chat) => {
-                if (chat.message && chat.message.trim() !== '') {
-                    const messageDiv = document.createElement('div');
-                    if (chat.sender.userID === userId) {
-                        messageDiv.className = "message self";
-                        messageDiv.textContent = chat.message + chat.timestamp;
-                        messages.appendChild(messageDiv);
-                    } else if (chat.sender.userID === recipientID) {
-                        messageDiv.className = "message notself";
-                        messageDiv.textContent = chat.message + chat.timestamp;
-                        messages.appendChild(messageDiv);
-                    }
-                }
-            });
-            scrollToBottom();
-        }
-
     }
-    const messageInput = document.getElementById("message-input");
-    messageInput.addEventListener("keypress", function (event) {
-        if (event.key === "Enter") {
-            sendMessage()
+
+    function loadHeader(x, user) {
+        const chat_header = document.getElementById('chat-header');
+        const profileImage = document.createElement("div");
+        profileImage.className = "friend-profilePhoto";
+        profileImage.style.marginLeft = "5px";
+        const profileImage1 = document.createElement("img");
+        if (user.profilePhoto) {
+            console.log("srfdgtfgdanhz");
+            profileImage1.src = user.profilePhoto;
+            profileImage1.alt = "Profile Photo";
+            profileImage.appendChild(profileImage1);
+        } else {
+            profileImage1.src = "../assets/default-profile.jpg";
+            profileImage1.alt = "Profile Photo";
+            profileImage.appendChild(profileImage1);
         }
-    });
+        chat_header.appendChild(profileImage);
+        const profileName = document.createElement("div");
+        profileName.className = "friend-Name";
+        profileName.innerText = x;
+        profileName.style.color = "black";
+        profileName.style.marginLeft = "10px";
+        chat_header.appendChild(profileName);
+    }
+
+    function displayChatHistory(chatHistory) {
+        const messages = document.getElementById("messages");
+        chatHistory.forEach((chat) => {
+            if (chat.message && chat.message.trim() !== '') {
+                const messageDiv = document.createElement('div');
+                if (chat.sender.userID === userId) {
+                    messageDiv.className = "message self";
+                } else if (chat.sender.userID === recipientID) {
+                    messageDiv.className = "message notself";
+                }
+
+                messageDiv.textContent = chat.message + ' ' + chat.timestamp;
+                messages.appendChild(messageDiv);
+            }
+        });
+        scrollToBottom();
+    }
+
     function sendMessage() {
 
         const messageInput = document.getElementById("message-input");
@@ -315,36 +382,7 @@
 
     socket.on("receiveMsg", (data) => {
         const { senderID, message, time } = data;
-        receivedMessage = message
-
-        // const dataToSend = {
-        //     recipientID: senderID,
-        //     userId: userId,
-        //     message: message,
-        //     time: time,
-        // };
-
-        // fetch("/saveRecievingHistory", {
-        //     method: "POST",
-        //     headers: {
-        //         "Content-Type": "application/json",
-        //     },
-        //     body: JSON.stringify(dataToSend),
-        // })
-        //     .then((response) => response.json())
-        //     .then((data) => {
-        //         console.log(data);
-        //         if (data.status === "success") {
-        //             console.log();
-        //         } else {
-        //             console.log("Failed to save History: " + data.message);
-        //         }
-        //     })
-        //     .catch((error) => {
-        //         console.error("Error saving History:", error);
-        //         alert("An error occurred while saving history. Please try again later.");
-        //     });
-
+        receivedMessage = message;
         const messagesDiv = document.getElementById("messages");
         const messageElement = document.createElement("div");
         messageElement.className = "message notself";
@@ -382,30 +420,16 @@
             });
     }
 
-
-
-    messageInput.addEventListener("keypress", function (event) {
-        data = {
-            userId: userId,
-            recipientID: recipientID,
-        }
-        socket.emit('typing', data);
-    });
-
-    socket.on('istyping', (data) => {
-        const chatHeader = document.getElementById('typing');
-        chatHeader.innerText = "Typing...";
-        setTimeout(() => {
-            chatHeader.innerText = "";
-        }, 2000);
-    });
-
-
     // rooom 
 
     function createRoom() {
         const roomName = document.getElementById("room-input").value;
         const members = document.getElementById("members").value;
+
+        if (roomName.trim() === "") {
+            alert("Room name cannot be empty.");
+            return;
+        }
 
         const data = {
             owner: userId,
@@ -424,7 +448,7 @@
             .then((data) => {
                 console.log(data);
                 if (data.status === "success") {
-                    alert("Room created")
+                    alert("Room created");
                 } else {
                     alert("Failed to create room: " + data.message);
                 }
@@ -433,7 +457,10 @@
                 console.error("Error creating room:", error);
                 alert("An error occurred while creating the room. Please try again later.");
             });
+
+        loadRooms()
     }
+
 
     function roomClickHandler(room) {
         roomName = room;
