--- a/views/userprofile.ejs
+++ b/views/userprofile.ejs
@@ -4,17 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <title>
-        <%= username %>
-    </title>
+    <title>Profile</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             background-color: #1d1b34;
             margin: 0;
-            padding: 100px;
+            padding: 20px;
+            /* Adjust padding as needed */
         }
 
         .profile-container {
@@ -44,7 +41,6 @@
             object-fit: cover;
         }
 
-
         .username {
             font-size: 24px;
             font-weight: bold;
@@ -54,11 +50,6 @@
         .bio {
             margin-top: 10px;
             color: #444;
-        }
-
-        .email {
-            margin-top: 10px;
-            color: #888;
         }
 
         .add-friend-button {
@@ -76,20 +67,7 @@
             background-color: #059a05;
         }
 
-
-        #repo-container {
-            display: flex;
-            justify-content: space-between;
-            margin-top: 30px;
-            border-radius: 20px;
-            background-color: #007bff;
-            height: 400px;
-            color: wheat;
-            margin-bottom: 20px;
-        }
-
         .repository {
-            margin: auto;
             width: 15%;
             height: 200px;
             background-color: #1d1b34;
@@ -98,17 +76,11 @@
             cursor: pointer;
         }
 
-        .flex {
-            display: flex;
-            flex-direction: row;
-        }
-
         #friends-list {
             background-color: #191961;
             border-radius: 15px;
             padding: 10px;
             margin: auto;
-            height: fit-content;
             width: 20%;
             overflow-y: auto;
         }
@@ -130,7 +102,6 @@
         <div class="username" id="username"></div>
         <div class="name" id="name"></div>
         <div class="bio" id="bio"></div>
-        <div class="region" id="region"></div>
         <button class="add-friend-button" onclick="addFriend()">Add Friend</button>
         <h2>Friends</h2>
         <div id="friends-list"></div>
@@ -187,7 +158,7 @@
             userId: userId,
             friendId: friendId,
         };
-console.log(data)
+        console.log(data)
         fetch("/addFriend", {
             method: "POST",
             headers: {
@@ -256,6 +227,6 @@ console.log(data)
     }
 
     loadRepositories();
-    </script>
+</script>
 
 </html>
