--- a/views/user.ejs
+++ b/views/user.ejs
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/frontend/user.css">
     <title>BitBliss</title>
+    <style>
+    #notifications{
+        background-color: aliceblue;
+        width: 200px;
+        height: max-content;
+    }
+    </style>
 </head>
 
 <body>
@@ -14,6 +21,7 @@
         <button class="profile-button" onclick="profile()">Profile</button>
         <input type="text" class="explore-bar" id="explore" placeholder="Explore...">
         <button onclick="explore()">explore</button>
+    <div id="notifications"></div>
     </div>
     <div>
         <div class="section">
