friend request notification update

--- a/views/explore.ejs
+++ b/views/explore.ejs
@@ -172,7 +172,7 @@
         </section>
         <section id="results">
             <label id="title"></label>
-            <div id="result"></div>
+            <div id="result" style="color: white; text-align: center;"></div>
         </section>
     </main>
 </body>
